@@ -12,18 +12,19 @@ test_that('one factor', {
     group <- c(rep('D1', N), rep('D2', N))    
     models <- confmirt.model('confmods/MGmodel1', quiet = TRUE)
     
-    mod_configural <- multipleGroup(dat, models, group = group, verbose = FALSE)
+    mod_configural <- multipleGroup(dat, models, group = group, verbose = FALSE, method = 'EM')
     expect_is(mod_configural, 'MultipleGroupClass')
-    mod_metric <- multipleGroup(dat, models, group = group, invariance=c('slopes'), verbose = FALSE)
+    mod_metric <- multipleGroup(dat, models, group = group, invariance=c('slopes'), verbose = FALSE, 
+                                method = 'EM')
     expect_is(mod_metric, 'MultipleGroupClass')
-    mod_scalar2 <- multipleGroup(dat, models, group = group, verbose = FALSE, 
+    mod_scalar2 <- multipleGroup(dat, models, group = group, verbose = FALSE, method = 'EM',
                                  invariance=c('slopes', 'intercepts', 'free_varcov','free_means'))
     expect_is(mod_scalar2, 'MultipleGroupClass')
     mod_scalar1 <- multipleGroup(dat, models, group = group, verbose = FALSE, method = 'MHRM',
                                  invariance=c('slopes', 'intercepts', 'free_varcov'))    
     expect_is(mod_scalar1, 'MultipleGroupClass')
     dat[1,1] <- dat[2,2] <- NA
-    mod_missing <- multipleGroup(dat, models, group = group, verbose = FALSE,
+    mod_missing <- multipleGroup(dat, models, group = group, verbose = FALSE, method = 'MHRM',
                                  invariance=c('slopes', 'intercepts', 'free_varcov'))
     expect_is(mod_scalar1, 'MultipleGroupClass')
     
