@@ -2,8 +2,9 @@
 mirt 0.3.2
 ----------------------------------------------------------------
 
-* Multiple group estimation available with the multipleGroup() function. Currently only uses MHRM
-  as the estimation engine
+* Multiple group estimation available with the multipleGroup() function. Uses the EM and MHRM
+  as the estimation engines, with the EM as default. The MHRM seems to be faster at two factors+
+  though and naturally should be more accurate, therefore it is set as the default
 
 * wald() function added for testing linear constraints. Useful in multiple group situations
   for testing individual parameters rather than always estimating a new model
@@ -11,6 +12,9 @@ mirt 0.3.2
 * Methods that use the MHRM can now estimate the nominal, gpcm, mcm, and 4PL models
 
 * fscores computable for multiple group objects and in general play nicer with missing data
+  (reported by Judith Conijn)
+
+* Oblique rotation bug fix for fscores and coef (reported by Pedro A. Barbetta)  
 
 * General bug fixes as usual that were spawned from all the added features 
 
